<resources>
    <string name="app_name">Business Cards</string>

    <string name="empty_card_indication">Your cards are empty</string>
    <string name="name_label">Name</string>
    <string name="sign_out_btn">Sign Out</string>
    <string name="image_profile_desc">image profile</string>
    <string name="banner_desc">banner background image</string>
    <string name="get_started_btn">Get Started</string>
    <string name="business_card_preview_desc">preview for the business card</string>
    <string name="card_name_label">Card Name</string>
    <string name="name_of_the_card_hint">name of the card</string>
    <string name="your_name_label">Your Name</string>
    <string name="card_name_holder_hint">card name holder</string>
    <string name="occupation_label">Occupation</string>
    <string name="occupation_hint">ex: Android Developer</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="phone_number_hint">ex: +201123456789</string>
    <string name="email_label">Email</string>
    <string name="email_hint">one@domain.com</string>
    <string name="address_label">Address</string>
    <string name="address_hint">cairo, Egy</string>
    <string name="web_site_label">Web Site</string>
    <string name="site_hint">http://www.domain.com</string>
    <string name="sloganLabel">Slogan</string>
    <string name="slogan_hint">ex: development company</string>
    <string name="continue_btn">Continue</string>
    <string name="first_banner_body">Welcome to business card designer app</string>
    <string name="first_banner_header">Business Card Designer</string>
    <string name="second_banner_header">Free Ideas</string>
    <string name="second_banner_body">Get inspired many ideas</string>
    <string name="third_banner_body">Sync your data with your google account so you won\'t lost your cards never</string>
    <string name="third_banner_header">Keep Sync</string>
    <string name="card_name">Card Name</string>
    <string name="preview">(preview)</string>
    <string name="wrong_card_msg">Something wrong happened</string>
    <string name="failed_auth_msg">Account Authentication was failed</string>
    <string name="welcome_msg">Welcome</string>
    <string name="signOutTitle">Sign Out!</string>
    <string name="dialog_msg">Are your sure!?</string>
    <string name="ys_btn">Yes</string>
    <string name="cancel_btn">Cancel</string>
    <string name="appAdsId">ca-app-pub-1683808898642028~6737762309</string>
    <string name="settings_action_menu">Settings</string>
    <string name="add_card_desc">Button to add create business card</string>
    <string name="cards_label">Cards</string>
    <string name="show_all">Show All</string>
    <string name="widgetButton">Show All</string>

</resources>
