<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AddCardFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Card Name"
                android:textAppearance="?android:textAppearanceLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/previewTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="(preview)"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardTitle" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardPreview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="6dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/previewTv">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imagePreview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/front_00"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/cardPreviewLayout"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="@id/imagePreview"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="start|center"
                            android:orientation="vertical"
                            android:paddingStart="16dp"
                            android:paddingEnd="8dp">

                            <TextView
                                android:id="@+id/cardNameHolderTv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/raleway_bold"
                                android:textAppearance="?android:textAppearanceLarge"
                                android:textColor="@android:color/white"
                                tools:text="Hadi Ahmed" />

                            <TextView
                                android:id="@+id/occupationTv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="16dp"
                                android:fontFamily="@font/raleway_medium"
                                android:textColor="@android:color/white"
                                tools:text="Android Developer" />

                            <TextView
                                android:id="@+id/phoneNumberTv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:textColor="@android:color/white"
                                tools:text="+201000652173" />

                            <TextView
                                android:id="@+id/emailTv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:textColor="@android:color/white"
                                tools:text="h.a7med2017@gmail.com" />

                            <TextView
                                android:id="@+id/addressTv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:textColor="@android:color/white"
                                tools:text="Cairo, Egypt" />

                            <TextView
                                android:id="@+id/websiteTv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/white"
                                tools:text="www.example.com" />
                        </LinearLayout>


                        <TextView
                            android:id="@+id/sloganTv"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/raleway_bold"
                            android:gravity="center"
                            android:textAppearance="?android:textAppearanceMedium"
                            tools:text="Entertainment Company" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>


            <GridLayout
                android:id="@+id/cardInputInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/materialCardPreview">

                <TextView
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/card_name_label"
                    android:textAppearance="?android:textAppearanceMedium" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="200dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_marginStart="8dp"
                    android:hint="@string/name_of_the_card_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cardNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="textPersonName|textCapWords" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/your_name_label"
                    android:textAppearance="?android:textAppearanceMedium" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="200dp"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_marginStart="8dp"
                    android:hint="@string/card_name_holder_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cardNameHolderEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="textPersonName|textCapWords" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/occupation_label"
                    android:textAppearance="?android:textAppearanceMedium" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="200dp"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_marginStart="8dp"
                    android:hint="@string/occupation_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/occupationEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_row="3"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/phone_number_label"
                    android:textAppearance="?android:textAppearanceMedium" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="200dp"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:layout_marginStart="8dp"
                    android:hint="@string/phone_number_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneNumberEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_row="4"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/email_label"
                    android:textAppearance="?android:textAppearanceMedium" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="200dp"
                    android:layout_row="4"
                    android:layout_column="1"
                    android:layout_marginStart="8dp"
                    android:hint="@string/email_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_row="5"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/address_label"
                    android:textAppearance="?android:textAppearanceMedium" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="200dp"
                    android:layout_row="5"
                    android:layout_column="1"
                    android:layout_marginStart="8dp"
                    android:hint="@string/address_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_row="6"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/web_site_label"
                    android:textAppearance="?android:textAppearanceMedium" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="200dp"
                    android:layout_row="6"
                    android:layout_column="1"
                    android:layout_marginStart="8dp"
                    android:hint="@string/site_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/webSiteEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_row="7"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/sloganLabel"
                    android:textAppearance="?android:textAppearanceMedium" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="200dp"
                    android:layout_row="7"
                    android:layout_column="1"
                    android:layout_marginStart="8dp"
                    android:hint="@string/slogan_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sloganEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

            </GridLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nextBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/continue_btn"
                app:cornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardInputInfoLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
