<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="firebaseUser"
            type="com.google.firebase.auth.FirebaseUser" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/settingsAppBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/settingsToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="?homeAsUpIndicator"
                app:title="Settings" />
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsAppBar"
            app:userImageSrc="@{firebaseUser.photoUrl}"
            android:contentDescription="@string/image_profile_desc"
            tools:srcCompat="@tools:sample/avatars[0]" />

        <TextView
            android:id="@+id/userNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/name_label"
            android:textAppearance="?android:textAppearanceLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userImage" />

        <TextView
            android:id="@+id/userDisplayedNam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/raleway_medium"
            android:text="@{firebaseUser.displayName}"
            android:textAppearance="?android:textAppearanceMedium"
            app:layout_constraintBaseline_toBaselineOf="@id/userNameLabel"
            app:layout_constraintStart_toEndOf="@id/userNameLabel"
            tools:text="Hadi AHmed" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/email_label"
            android:textAppearance="?android:textAppearanceLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userNameLabel" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/raleway_medium"
            android:text="@{firebaseUser.email}"
            android:textAppearance="?android:textAppearanceMedium"
            app:layout_constraintBaseline_toBaselineOf="@id/emailLabel"
            app:layout_constraintStart_toEndOf="@id/emailLabel"
            tools:text="h.a7med2017@gmail.com" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signOuBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/sign_out_btn"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeWidth="2dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>